[gd_scene load_steps=13 format=3 uid="uid://bgouttcnpgu7v"]

[ext_resource type="Script" path="res://Scenes/UI/StartMenu.gd" id="1_7nd57"]
[ext_resource type="PackedScene" uid="uid://cqbw6i5ys45go" path="res://Assets/Models/camera.glb" id="1_qaxqn"]
[ext_resource type="Texture2D" uid="uid://vsgtaaeeg5n5" path="res://Assets/UI/esc.png" id="4_3d0hu"]
[ext_resource type="Texture2D" uid="uid://m2o1wyr7ugew" path="res://Assets/UI/space.png" id="5_akepr"]
[ext_resource type="Texture2D" uid="uid://db0ix3lqsk1ib" path="res://Assets/UI/wasds.png" id="6_gw1f6"]
[ext_resource type="Texture2D" uid="uid://dmxywit4111c0" path="res://Assets/UI/r.png" id="7_qj5cb"]
[ext_resource type="Texture2D" uid="uid://2xsr63e8jfhs" path="res://Assets/UI/e.png" id="8_213mw"]
[ext_resource type="Texture2D" uid="uid://r0bgsfqxya2a" path="res://Assets/UI/right_button.png" id="9_i6spc"]
[ext_resource type="Texture2D" uid="uid://daox03s57jvch" path="res://Assets/UI/left_button.png" id="10_7fgfs"]

[sub_resource type="Environment" id="Environment_sv3w8"]
background_mode = 1
background_color = Color(0.00392157, 0.00784314, 0.0352941, 1)

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_1bbqw"]

[sub_resource type="LabelSettings" id="LabelSettings_ive0t"]
font_size = 9
font_color = Color(0.721569, 0.819608, 0.945098, 1)

[node name="StartMenu" type="Node3D" node_paths=PackedStringArray("node_to_rotate", "gui_controls", "title", "play_button", "quit_button", "controls_button")]
script = ExtResource("1_7nd57")
node_to_rotate = NodePath("camera")
gui_controls = NodePath("GuiControls")
title = NodePath("Control/Label")
play_button = NodePath("Control/Play")
quit_button = NodePath("Control/Quit")
controls_button = NodePath("Control/Controls")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -22.0
offset_right = 23.5
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"

[node name="Quit" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = 47.0
offset_right = 36.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
text = "QUIT
"

[node name="Controls" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.69
offset_top = 11.0
offset_right = 52.31
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
text = "Controls"

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -75.0
offset_right = 32.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
text = "The Copy Cam"

[node name="Camera3D" type="Camera3D" parent="."]

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.942688, 0.237724, -0.23415, 0, 0.701731, 0.712442, 0.333675, -0.671611, 0.661513, -5.73424, 21.6801, 11.6216)
shadow_enabled = true

[node name="camera" parent="." instance=ExtResource("1_qaxqn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.43034, 0, -2.32059)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sv3w8")
camera_attributes = SubResource("CameraAttributesPractical_1bbqw")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="GuiControls" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 7.0
offset_right = 7.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 1
mouse_force_pass_scroll_events = false

[node name="PauseControl" type="Control" parent="GuiControls"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Pause" type="Control" parent="GuiControls/PauseControl"]
anchors_preset = 0
offset_left = 2.0
offset_top = 8.0
offset_right = 42.0
offset_bottom = 48.0
mouse_filter = 2

[node name="Esc" type="TextureRect" parent="GuiControls/PauseControl/Pause"]
layout_mode = 2
offset_left = 8.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("4_3d0hu")

[node name="Pause" type="Label" parent="GuiControls/PauseControl/Pause"]
layout_mode = 0
offset_left = 30.0
offset_top = -2.0
offset_right = 57.0
offset_bottom = 14.0
text = "Pause"
label_settings = SubResource("LabelSettings_ive0t")

[node name="KeyBoard" type="Control" parent="GuiControls/PauseControl"]
anchors_preset = 0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 80.0
mouse_filter = 2

[node name="Space" type="TextureRect" parent="GuiControls/PauseControl/KeyBoard"]
layout_mode = 0
offset_left = 122.0
offset_top = 2.0
offset_right = 226.0
offset_bottom = 18.0
texture = ExtResource("5_akepr")

[node name="WASD" type="TextureRect" parent="GuiControls/PauseControl/KeyBoard"]
layout_mode = 0
offset_left = 122.0
offset_top = -34.0
offset_right = 170.0
offset_bottom = -2.0
texture = ExtResource("6_gw1f6")

[node name="R" type="TextureRect" parent="GuiControls/PauseControl/KeyBoard"]
layout_mode = 0
offset_left = 8.0
offset_top = -16.0
offset_right = 24.0
texture = ExtResource("7_qj5cb")

[node name="walk" type="Label" parent="GuiControls/PauseControl/KeyBoard"]
layout_mode = 0
offset_left = 234.0
offset_top = -34.0
offset_right = 261.0
offset_bottom = -18.0
text = "Walk"
label_settings = SubResource("LabelSettings_ive0t")

[node name="jump" type="Label" parent="GuiControls/PauseControl/KeyBoard"]
layout_mode = 0
offset_left = 234.0
offset_top = 2.0
offset_right = 261.0
offset_bottom = 18.0
text = "Jump
"
label_settings = SubResource("LabelSettings_ive0t")

[node name="Restart" type="Label" parent="GuiControls/PauseControl/KeyBoard"]
layout_mode = 0
offset_left = 32.0
offset_top = -16.0
offset_right = 89.0
text = "Restart Level"
label_settings = SubResource("LabelSettings_ive0t")

[node name="E" type="TextureRect" parent="GuiControls/PauseControl/KeyBoard"]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 24.0
offset_bottom = 18.0
texture = ExtResource("8_213mw")

[node name="Rotate" type="Label" parent="GuiControls/PauseControl/KeyBoard"]
layout_mode = 0
offset_left = 32.0
offset_top = 2.0
offset_right = 92.0
offset_bottom = 18.0
text = "Rotate Object"
label_settings = SubResource("LabelSettings_ive0t")

[node name="Mouse" type="Control" parent="GuiControls/PauseControl"]
anchors_preset = 0
offset_left = -17.0
offset_top = 6.0
offset_right = 23.0
offset_bottom = 46.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="GuiControls/PauseControl/Mouse"]
layout_mode = 0
offset_left = 24.0
offset_top = 95.0
offset_right = 42.0
offset_bottom = 124.0
texture = ExtResource("9_i6spc")

[node name="Left" type="Label" parent="GuiControls/PauseControl/Mouse"]
layout_mode = 0
offset_left = 49.0
offset_top = 68.0
offset_right = 98.0
offset_bottom = 84.0
text = "Take Photo"
label_settings = SubResource("LabelSettings_ive0t")

[node name="Right" type="Label" parent="GuiControls/PauseControl/Mouse"]
layout_mode = 0
offset_left = 49.0
offset_top = 100.0
offset_right = 153.0
offset_bottom = 116.0
text = "Select Mode / Put Object"
label_settings = SubResource("LabelSettings_ive0t")

[node name="TextureRect2" type="TextureRect" parent="GuiControls/PauseControl/Mouse"]
layout_mode = 0
offset_left = 24.0
offset_top = 64.0
offset_right = 36.0
offset_bottom = 80.0
texture = ExtResource("10_7fgfs")

[node name="Continue" type="Button" parent="GuiControls/PauseControl"]
layout_mode = 0
offset_left = 197.0
offset_top = 99.0
offset_right = 276.0
offset_bottom = 130.0
scale = Vector2(0.75, 0.75)
text = "Continue"

[connection signal="pressed" from="Control/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Control/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="GuiControls/PauseControl/Continue" to="." method="_on_continue_controls_pressed"]
